<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:orderInCategory="0"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_grades"
        android:icon="@drawable/baseline_grade_24"
        android:orderInCategory="1"
        android:title="@string/title_grades" />

    <item
        android:id="@+id/navigation_present"
        android:icon="@drawable/baseline_assignment_turned_in_24"
        android:orderInCategory="2"
        android:title="@string/title_present" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/baseline_supervised_user_circle_24"
        android:orderInCategory="3"
        android:title="@string/title_user" />

</menu>
