<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="25dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/forgotPasswordTitle"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/forgotPasswordDes"
        android:textColor="@color/Dark"
        android:textSize="10sp" />

    <LinearLayout
        android:focusable="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/accountHintNoEng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:singleLine="true"
            android:hint="@string/InputaccountHint"
            android:id="@+id/dialogAccount"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:focusable="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/idnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:singleLine="true"
            android:hint="@string/idnumberHint"
            android:id="@+id/idnumber"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"

        android:focusable="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:entries="@array/QuestionList"
            android:spinnerMode="dialog"
            android:textSize="12sp"
            android:layout_marginLeft="5dp"
            android:id="@+id/questionSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:focusable="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:singleLine="true"
            android:hint="@string/answerHint"
            android:id="@+id/answer"
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_centerInParent="true"
            android:id="@+id/sendBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:background="@color/colorPrimary"
            android:textColor="@color/Blank"/>
    </RelativeLayout>

</LinearLayout>