<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home.Activitys.ChangePassword">

    <include layout="@layout/nutc_user_header"/>

    <LinearLayout
        android:orientation="vertical"
        android:padding="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/changePasswordTitle"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/changePasswordDes"
            android:textColor="@color/Dark"
            android:textSize="10sp" />

        <LinearLayout
            android:focusable="false"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/oldPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:singleLine="true"
                android:hint="@string/InputOldPasswordHint"
                android:id="@+id/oldPassword"
                android:inputType="textPassword"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:focusable="false"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/newPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:singleLine="true"
                android:hint="@string/InputNewPasswordHint"
                android:id="@+id/newPassword"
                android:inputType="textPassword"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:focusable="false"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/newPasswordCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:singleLine="true"
                android:hint="@string/InputNewPasswordHint"
                android:id="@+id/checkNewPassword"
                android:inputType="textPassword"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_centerInParent="true"
                android:id="@+id/sendBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:background="@color/colorPrimary"
                android:textColor="@color/Blank"/>
        </RelativeLayout>


    </LinearLayout>
</LinearLayout>