<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:clickable="true"

    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/anno_title"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"
                android:text="@string/notice_template_title"
                android:textColor="@color/Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_marginTop="1dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="10sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/notice_template_type_description"
                    android:textColor="@color/Dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:textSize="10sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/colon"
                    android:textColor="@color/Dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/anno_type"
                    android:textSize="10sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/notice_template_student_type"
                    android:textColor="@color/Dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="10sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/split"
                    android:textColor="@color/Dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="10sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/notice_template_entities"
                    android:textColor="@color/Dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:textSize="10sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/colon"
                    android:textColor="@color/Dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/anno_entities"
                    android:textSize="10sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/notice_template_entities_desc"
                    android:textColor="@color/Dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>