<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardElevation="10dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/hash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.25"
                android:background="@drawable/seminar_type"
                android:padding="5dp"
                android:text="@string/hash"
                android:textAlignment="center"
                android:textColor="@color/Blank"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:padding="5dp"
                android:text="@string/seminar_template_name"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/gender"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.75"
                android:background="@drawable/male"
                android:padding="5dp"
                android:text="@string/seminar_template_gender"
                android:textAlignment="center"
                android:textColor="@color/Blank"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>