<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    app:cardElevation="10dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:weightSum="3"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:padding="5dp"
                android:background="@drawable/seminar_type"
                android:layout_weight="0.75"
                android:id="@+id/type"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center_vertical"
                android:text="@string/seminar_template_type"
                android:textColor="@color/Blank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:padding="5dp"
                android:layout_weight="1.5"
                android:id="@+id/name"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center_vertical"
                android:text="@string/seminar_template_name"
                android:textColor="@color/Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:padding="5dp"

                android:layout_weight="0.75"
                android:background="@drawable/male"
                android:id="@+id/gender"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_gravity="center_vertical"
                android:text="@string/seminar_template_gender"
                android:textColor="@color/Blank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>